[gd_scene load_steps=4 format=2]

[ext_resource path="res://img/HUD Menus.png" type="Texture" id=1]
[ext_resource path="res://scripts/script_pausa.gd" type="Script" id=2]
[ext_resource path="res://img/Pausado.png" type="Texture" id=3]

[node name="NodePausa" type="Node2D"]
pause_mode = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_vertical_guides_": [ 306.049 ]
}

[node name="Button" type="Button" parent="."]
margin_left = 223.245
margin_top = 14.6462
margin_right = 288.245
margin_bottom = 81.6462
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Button"]
position = Vector2( 30.2519, 31.5124 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 424, 565, 99, 97 )

[node name="Button2" type="Button" parent="."]
margin_left = 313.797
margin_top = 8.22939
margin_right = 387.797
margin_bottom = 80.2294
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Button2"]
position = Vector2( 36.488, 39.1417 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 537, 563, 98, 101 )

[node name="Button3" type="Button" parent="."]
margin_left = 507.396
margin_top = 16.7511
margin_right = 565.396
margin_bottom = 79.7511
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Button3"]
position = Vector2( 25.3968, 28.0986 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 646, 562, 104, 102 )

[node name="PausadoSprite" type="Sprite" parent="."]
visible = false
position = Vector2( 301.564, 873 )
scale = Vector2( 2.05944, 2.05944 )
z_index = 2
texture = ExtResource( 3 )
[connection signal="pressed" from="Button" to="." method="_on_Button_pause_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button_play_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button_exit_pressed"]
